--- a/frontchat/src/index.css
+++ b/frontchat/src/index.css
@@ -6,4 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: black;
+}
+*{
+  margin: 0;
+  padding: 0;
 }
