--- a/frontchat/src/Components/Contact/Contact.css
+++ b/frontchat/src/Components/Contact/Contact.css
@@ -4,8 +4,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
     margin-bottom: 100px;
+}
+.contact_side{
+    color: aliceblue;
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
+    font-size: 5em;
 }
 
 .inner_contact{
