--- a/frontchat/src/Components/Contact/Contact.css
+++ b/frontchat/src/Components/Contact/Contact.css
@@ -1,56 +1,102 @@
-.contact{
-    height: 50svh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 100px;
-}
-.contact_side{
-    color: aliceblue;
-    writing-mode: vertical-rl;
-    transform: rotate(180deg);
-    font-size: 5em;
+.contact {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 100px;
+  padding: 20px;
+  position: relative;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
-.inner_contact{
-    height: 50svh;
-    width: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(255, 255, 255);
+.contact_side {
+  color: aliceblue;
+  writing-mode: vertical-rl;
+  transform: rotate(180deg);
+  font-size: 5em;
+  margin-right: 20px;
 }
-.left_contact{
-    height: inherit;
-    width: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 
+.inner_contact {
+  width: 80%;
+  display: flex;
+  background-color: white;
+  flex-direction: row;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.2);
 }
-.right_contact{
-    height: inherit;
-    width: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+
+.left_contact,
+.right_contact {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.right_contact {
+  flex-direction: column;
+  justify-content: space-evenly;
+  gap: 20px;
+}
+
+.c_ul {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.c_ul li,
+.o {
+  list-style: none;
+  font-size: 1.5em;
+  font-weight: 800;
+  text-align: center;
+  font-family: 'Lucida Sans', sans-serif;
+}
+
+.tri_image {
+  height: 150%;
+  max-height: 300px;
+  filter: drop-shadow(0px 50px 50px rgba(0, 0, 0, 0.5));
+  object-fit: contain;
+}
+
+/* Responsive for tablets and phones */
+@media (max-width: 768px) {
+  .contact {
     flex-direction: column;
-}
-.c_ul li,.o{
-    list-style: none;
-    font-size: 1.5em;
-    text-align: center;
-    font-weight: 800;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-.c_ul{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(2,1fr);
-    gap: 20%;
-}
-.tri_image{
-    height: 150%;
-    filter: drop-shadow(0px 50px 50px rgb(0, 0, 0));
+  }
+
+  .contact_side {
+    font-size: 3em;
+    writing-mode: horizontal-tb;
+    transform: none;
+    margin: 0;
+  }
+
+  .inner_contact {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .left_contact,
+  .right_contact {
+    width: 100%;
+    padding: 10px;
+  }
+
+  .tri_image {
+    height: auto;
+    width: 80%;
+    max-height: 200px;
+  }
+
+  .c_ul li,
+  .o {
+    font-size: 1.2em;
+  }
 }
