--- a/frontchat/src/Components/Navbar/Navbar.css
+++ b/frontchat/src/Components/Navbar/Navbar.css
@@ -17,7 +17,7 @@
     align-items: center;
     justify-content: space-around;
 }
-.ul li{
+.Link{
     padding: 1%;
     border-radius: 50px;
     transition-duration: 1s;
@@ -25,8 +25,10 @@
     position: relative;
     background-color: black;
     font-size: 1.2em;
+    color: aliceblue;
+    text-decoration: none;
 }
-.ul li:hover::before{
+.Link:hover::before{
     content: "";
     position: absolute;
     height: 100%;
@@ -39,7 +41,7 @@
     border-radius: 50px;
     background: linear-gradient(70deg,rgba(9, 117, 175, 0.775),rgb(125, 5, 134));
 }
-.ul li:hover::after{
+.Link:hover::after{
     content: "";
     position: absolute;
     height: 100%;
@@ -51,10 +53,9 @@
     border-radius: 50px;
     background: black;
 }
-.ul li:hover{
+.Link:hover{
     transform: translateY(5px);
 }
-
 
 
 
@@ -62,6 +63,6 @@
 @media (max-width:480px){
     .navbar{
         width: 100svw;
-        background-color: aqua;
+        font-size: 0.6em;
     }
 }
