--- a/frontchat/src/index.css
+++ b/frontchat/src/index.css
@@ -12,3 +12,12 @@ body {
   margin: 0;
   padding: 0;
 }
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
