--- a/frontchat/src/Components/Contact/Contact.css
+++ b/frontchat/src/Components/Contact/Contact.css
@@ -56,11 +56,18 @@
   font-weight: 800;
   text-align: center;
   font-family: 'Lucida Sans', sans-serif;
+  
 }
-
+.c_ul a,.right_contact a{
+  text-decoration: none;
+  color: black;
+  font-family:'Courier New', Courier, monospace;
+  background: linear-gradient(12deg,rgb(0, 149, 255),black);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 .tri_image {
-  height: 150%;
-  max-height: 300px;
+  max-height: 500px;
   filter: drop-shadow(0px 50px 50px rgba(0, 0, 0, 0.5));
   object-fit: contain;
 }
