--- a/frontchat/src/Components/Main_bar/MainBar.css
+++ b/frontchat/src/Components/Main_bar/MainBar.css
@@ -19,6 +19,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.715);
+    background: linear-gradient(rgba(0, 0, 0, 0.456),black 100%);
     height: 100%;
     width: 100%;
     flex-wrap: wrap;
@@ -55,7 +56,7 @@
 }
 
 .ai {
-    background: linear-gradient(90deg, #065cb8c5, rgb(255, 255, 255));
+    background: linear-gradient(90deg, #065cb8, rgba(178, 178, 178, 0.986));
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
     font-size: 1.8em;
