--- a/frontchat/src/Components/Navbar/Navbar.css
+++ b/frontchat/src/Components/Navbar/Navbar.css
@@ -7,7 +7,7 @@
     justify-content: center;
     color: rgb(255, 255, 255);
     position: fixed;
-    background-color: rgba(0, 0, 0, 0.345);
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 100;
 }
 .ul{
@@ -19,14 +19,15 @@
 }
 .Link{
     padding: 1%;
-    border-radius: 50px;
+    border-radius: 5px;
     transition-duration: 1s;
     cursor: pointer;
     position: relative;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     font-size: 1.2em;
     color: aliceblue;
     text-decoration: none;
+    border-radius: 50px;
 }
 .Link:hover::before{
     content: "";
@@ -37,7 +38,7 @@
     top: 50%;
     transform: translate(-50%,-50%);
     z-index: -2;
-    padding: 2px;
+    padding: 3px;
     border-radius: 50px;
     background: linear-gradient(70deg,rgba(9, 117, 175, 0.775),rgb(125, 5, 134));
 }
