--- a/frontchat/src/pages/Certificates/Certificates.css
+++ b/frontchat/src/pages/Certificates/Certificates.css
@@ -1,60 +1,115 @@
-.certificates{
+.certificates {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 20%;
+  padding-top: 15%;
   padding-bottom: 100px;
-  /* background: radial-gradient(circle at 10%, #023b5f, #333 50%, #eeeeeee4 75%, #333 25%); */
   backdrop-filter: blur(10px);
 }
-.inner_certificates{
-  height: 100%;
-  width: 80%;
-  border-radius: 50px;
+
+.inner_certificates {
+  width: 100%;
+  max-width: 1200px;
+  border-radius: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 20svh;
+  gap: 10vh;
 }
 
-.cer-left,.cer-right{
-  height: 55svh;
+.cer-left,
+.cer-right {
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  box-shadow: inset 0px 0px 40px rgb(26, 55, 104);
-  border-radius: 50px;
-  position: relative;
   background-color: rgb(21, 21, 21);
+  box-shadow: inset 0px 0px 40px rgb(26, 55, 104);
+  border-radius: 30px;
+  padding: 20px;
+  gap: 20px;
   transition-duration: 1s;
+  width: 100%;
+  height: 50svh;
 }
-.cer-right{
+
+.cer-right {
   flex-direction: row-reverse;
 }
-.l-left{
-  height: 100%;
+
+.l-left,
+.l-right {
   width: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.l-right{
-  height: 100%;
-  width: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+.l-left img {
+  max-width: 90%;
+  height: auto;
+  max-height: 250px;
+  border-radius: 20px;
+}
+
+.l-right {
+  text-align: center;
   color: aliceblue;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  text-align: center;
+  padding: 10px;
 }
-.l-right p{
-  width: 80%;
-  font-size: 1.25em;
+
+.l-right p {
+  font-size: 1.1em;
+  width: 90%;
 }
-.l-left img{
-  height: 18rem;
-  border-radius: 50px;
+
+/* Responsive Design */
+
+@media (max-width: 1024px) {
+  .cer-left,
+  .cer-right {
+    flex-direction: column;
+    max-height: none;
+    gap: 10px;
+  }
+
+  .l-left,
+  .l-right {
+    width: 100%;
+  }
+
+  .l-left img {
+    max-height: 200px;
+  }
+
+  .l-right p {
+    font-size: 1em;
+  }
+}
+
+@media (max-width: 600px) {
+  .inner_certificates {
+    width: 95%;
+    gap: 5vh;
+  }
+
+  .cer-left,
+  .cer-right {
+    padding: 15px;
+    border-radius: 20px;
+    height: fit-content;
+  }
+
+  .l-left img {
+    max-height: 160px;
+    border-radius: 15px;
+  }
+
+  .l-right p {
+    font-size: 0.95em;
+    width: 95%;
+  }
 }
