--- a/frontchat/src/Components/Main_bar/MainBar.css
+++ b/frontchat/src/Components/Main_bar/MainBar.css
@@ -19,7 +19,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.715);
-    background: linear-gradient(rgba(0, 0, 0, 0.456),black 100%);
+    background: linear-gradient(rgba(0, 0, 0, 0.456),rgb(12, 12, 12) 100%);
     height: 100%;
     width: 100%;
     flex-wrap: wrap;
