--- a/frontchat/src/Components/CommandBar/CommandBar.css
+++ b/frontchat/src/Components/CommandBar/CommandBar.css
@@ -1,8 +1,8 @@
 .command-container {
-  width: 60%;
+  width: 70%;
   margin: 80px auto;
   padding: 20px 30px;
-  background-color: #d2cece;
+  background-color: #e5ecf0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -11,12 +11,15 @@
   border-top: 1px solid #0a5768;
   border-radius: 30px;
   box-shadow: 0px 0px 20px -5px cyan;
-  position: relative; /* ⬅ Replaced absolute */
+  position: absolute; /* ⬅ Replaced absolute */
+  bottom: -8%;
+  left: 50%;
+  translate: -50%;
 }
 .tag_h1{
   color: #6d6666;
   width: 40%;
-  background: linear-gradient(30deg,rgb(85, 5, 164),rgba(19, 232, 0, 0.728));
+  background: linear-gradient(30deg,rgb(18, 49, 101),rgba(15, 238, 246, 0.728));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -30,7 +33,7 @@
   background-color: transparent;
   color: #000000;
   border-radius: 20px;
-  box-shadow: inset 0 0 5px rgba(0,0,0,0.1);
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.308);
   transition: all 0.3s ease-in-out;
 }
 
@@ -38,12 +41,13 @@
   color: #777;
 }
 
-.send-btn {
+.send-btns {
   padding: 12px 16px;
   border: none;
-  border-radius: 50%;
-  background-color: #1a1a1a;
+  border-radius: 40%;
+  background-color: #162a39;
   color: white;
+  font-size: 1.1em;
   cursor: pointer;
   transition: transform 0.2s ease;
 }
