--- a/frontchat/src/Components/Main_bar/MainBar.css
+++ b/frontchat/src/Components/Main_bar/MainBar.css
@@ -17,7 +17,7 @@
     background-blend-mode: luminosity;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     background-color: rgba(0, 0, 0, 0.715);
     background: linear-gradient(rgba(0, 0, 0, 0.456),rgb(12, 12, 12) 100%);
     height: 100%;
@@ -25,9 +25,11 @@
     flex-wrap: wrap;
     padding: 1rem;
     box-sizing: border-box;
+    scale: 1.1;
 }
 
 .middle {
+    scale: 1.1;
     color: aliceblue;
     display: flex;
     align-items: flex-start;
