--- a/frontchat/src/Components/Navbar/Navbar.css
+++ b/frontchat/src/Components/Navbar/Navbar.css
@@ -7,55 +7,50 @@
     justify-content: center;
     color: rgb(255, 255, 255);
     position: fixed;
-    background-color: rgba(0, 0, 0, 0.5);
     z-index: 100;
 }
 .ul{
+    backdrop-filter: blur(50px);
+    padding: 5px;
+    border-radius: 55px;
     width: 70%;
     list-style: none;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    box-shadow: 0px 0px 10px -5px white inset;
+    transition-duration: 0.5s;
 }
 .Link{
+    text-shadow: 0px 0px 10px black;
     padding: 1%;
-    border-radius: 5px;
-    transition-duration: 1s;
+    transition-duration: 0.2s;
     cursor: pointer;
     position: relative;
-    background-color: rgb(0, 0, 0);
     font-size: 1.2em;
     color: aliceblue;
     text-decoration: none;
     border-radius: 50px;
+    position: relative;
+    text-decoration: none;
 }
-.Link:hover::before{
+
+.Link::after {
     content: "";
     position: absolute;
-    height: 100%;
-    width: 100%;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%);
-    z-index: -2;
-    padding: 3px;
-    border-radius: 50px;
-    background: linear-gradient(70deg,rgba(9, 117, 175, 0.775),rgb(125, 5, 134));
-}
-.Link:hover::after{
-    content: "";
-    position: absolute;
+    width: 0%;
     height: 100%;
-    width: 100%;
-    left: 50%;
-    top: 50%;
     transform: translate(-50%,-50%);
     z-index: -1;
+    background: linear-gradient(45deg,rgba(255, 255, 255, 0.523),rgb(27, 59, 85));
+    transition: width 0.3s ease-in-out;
     border-radius: 50px;
-    background: black;
 }
-.Link:hover{
-    transform: translateY(5px);
+
+.Link.active::after {
+    width: 100%;
 }
 
 
