--- a/frontchat/src/Components/Skills/Skills.css
+++ b/frontchat/src/Components/Skills/Skills.css
@@ -4,17 +4,24 @@
   flex-direction: column;
   align-items: center;
   padding-bottom: 150px;
+  background-color: #9bc3e664;
+  background: linear-gradient(45deg,#9bc3e664,black 80%);
+  border-radius: 50px;
+  margin-bottom: 100px;
+  backdrop-filter: blur(500px);
 }
 
 .head {
   font-size: 3.5rem;
   font-weight: 800;
-  background: linear-gradient(45deg, #00f, #f0f);
+  background: linear-gradient(55deg, rgb(8, 176, 222), rgb(204, 195, 199));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   text-align: center;
   margin-bottom: 40px;
   overflow: hidden;
+  border-radius: 50px;
+  padding: 10px;
 }
 
 .inner_tech {
