--- a/frontchat/src/pages/Projects/Projects.css
+++ b/frontchat/src/pages/Projects/Projects.css
@@ -18,6 +18,15 @@ body {
 .projects-section {
   padding: 8rem 2rem;
   text-align: center;
+  animation: fadein 2s;
+}
+@keyframes fadein{
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
 }
 
 .section-title {
@@ -70,7 +79,7 @@ body {
   padding: 2rem;
   position: relative;
   overflow: hidden;
-  background: linear-gradient(-45deg,rgba(3, 235, 235, 0.482),rgb(0, 0, 0));
+  background: linear-gradient(-45deg,rgb(49, 91, 106),rgb(0, 0, 0));
   box-shadow: 0 0 20px rgba(0, 255, 255, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   height: 30svh;
