--- a/frontchat/src/pages/Projects/Projects.css
+++ b/frontchat/src/pages/Projects/Projects.css
@@ -63,7 +63,13 @@ body {
   margin: 0 auto;
   padding: 0 1rem;
 }
-
+.projects-grid2 {
+  display: grid;
+  gap: 2rem;
+  max-width: 90svw;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
 @media (max-width: 768px) {
   .projects-grid {
     grid-template-columns: 1fr; /* 1 column on mobile */
@@ -72,7 +78,25 @@ body {
     padding-top: 3em;
   }
 }
-
+.symbol{
+  border: 2px solid white;
+  width: 2em;
+  position: relative;
+  margin-left: 100px;
+  margin-bottom: 50px;
+  padding: 0.4em;
+  box-shadow: 0px 0px 15px -5px white inset;
+  border-radius: 10px;
+  color: #7ba4b7;
+  font-size: 2em;
+  transform: translate(35em);
+  cursor: pointer;
+}
+.dots{
+  position: absolute;
+  left: 2%;
+  top: 5%;
+}
 .project-card {
   background: var(--card-color);
   border-radius: 1rem;
@@ -84,9 +108,13 @@ body {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   height: 30svh;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: space-around;
   flex-direction: column;
+  cursor: grab;
+}
+.project-card:active{
+  cursor: grabbing;
 }
 
 .project-card::before {
