--- a/frontchat/src/Components/About/About.css
+++ b/frontchat/src/Components/About/About.css
@@ -2,7 +2,7 @@
   max-width: 80%;
   margin: 80px auto;
   padding: 40px;
-  background-color: #1e1e1e;
+  background-color: #181f25;
   color: #e0e0e0;
   border-radius: 16px;
   box-shadow: 0 0 30px rgba(0, 255, 255, 0.1);
