--- a/frontchat/src/Components/CommandBar/CommandBar.css
+++ b/frontchat/src/Components/CommandBar/CommandBar.css
@@ -11,7 +11,10 @@
   border-top: 1px solid #0a5768;
   border-radius: 30px;
   box-shadow: 0px 0px 20px -5px cyan;
-  position: relative;
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  transform: translate(-50%);
 }
 .tag_h1{
   color: #6d6666;
