--- a/frontchat/src/Components/MiniNav/MiniNav.css
+++ b/frontchat/src/Components/MiniNav/MiniNav.css
@@ -12,7 +12,7 @@
 
 .mini-nav-item {
   cursor: pointer;
-  font-size: 18px;
+  font-size: 1.1em;
   font-weight: bold;
   background-color: #1e3d51;
   color: #fff;
