--- a/frontchat/src/Components/Contact/Contact.css
+++ b/frontchat/src/Components/Contact/Contact.css
@@ -25,7 +25,7 @@
   flex-direction: row;
   border-radius: 12px;
   overflow: hidden;
-  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0px 1px 50000px rgba(21, 59, 81, 0.902);
 }
 
 .left_contact,
