--- a/frontchat/src/pages/Certificates/Certificates.css
+++ b/frontchat/src/pages/Certificates/Certificates.css
@@ -7,12 +7,34 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 15%;
+  padding-top: 10%;
   padding-bottom: 100px;
   backdrop-filter: blur(10px);
+  background-position: center;
 }
-
+.sidenav{
+  width: 90%;
+  border-bottom: 2px solid white;
+  display: flex;
+  align-items: stretch;
+  justify-content: baseline;
+  gap: 10%;
+  padding-bottom: 20px;
+  padding-left: 5%;
+}
+.sidenav h2{
+  cursor: pointer;
+  transition-duration: 0.5s;
+  
+}
+.sidenav h2:hover{
+  scale: 1.2;
+  background: linear-gradient(45deg,rgb(7, 143, 227),cyan);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+}
 .inner_certificates {
+  padding: 1.2em;
   width: 100%;
   max-width: 1200px;
   border-radius: 30px;
@@ -116,5 +138,14 @@
   .l-right p {
     font-size: 0.95em;
     width: 95%;
+  }
+  .sidenav{
+    flex-direction: column;
+    gap: 5%;
+    align-items: end;
+  }
+  .sidenav h2:hover{
+    scale: 1;
+    width: fit-content;
   }
 }
