--- a/frontchat/src/pages/Certificates/Certificates.css
+++ b/frontchat/src/pages/Certificates/Certificates.css
@@ -27,7 +27,7 @@
   transition-duration: 0.5s;
   
 }
-.sidenav h2:hover{
+.y{
   scale: 1.2;
   background: linear-gradient(45deg,rgb(7, 143, 227),cyan);
   -webkit-text-fill-color: transparent;
