--- a/frontchat/src/Components/CommandBar/CommandBar.css
+++ b/frontchat/src/Components/CommandBar/CommandBar.css
@@ -10,7 +10,7 @@
   z-index: 1;
   border-top: 1px solid #0a5768;
   border-radius: 30px;
-  box-shadow: 0px 0px 20px -5px cyan;
+  box-shadow: 0px 0px 20px 0px cyan inset;
   bottom: 0px;
 }
 .tag_h1{
