--- a/frontchat/src/Components/Links/Links.css
+++ b/frontchat/src/Components/Links/Links.css
@@ -2,10 +2,14 @@
   height: 70svh;
   width: 100%;
   margin-bottom: 100px;
+  margin-top: 10%;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #3737371f;
+  background-color: black;
+  border-radius: 150px;
+  box-shadow: 0px 0px 200px -50px cornflowerblue inset;
 }
 
 .inner_links {
@@ -46,6 +50,9 @@
   color: #ffffff;
   writing-mode: vertical-rl;
   font-size: 5em;
+  background: linear-gradient(45deg, cyan, rgb(45, 45, 206));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 
