--- a/frontchat/src/Components/Main_bar/MainBar.css
+++ b/frontchat/src/Components/Main_bar/MainBar.css
@@ -65,14 +65,14 @@
 }
 .resume{
   padding: 10px;
-  font-size: 1.5em;
+  font-size: 1.35em;
   border-radius: 50px;
   transition-duration: 0.5s;
   position: relative;
   background-color: black;
   text-decoration: none;
-  color: aliceblue;
-  font-weight: 600;
+  color: rgb(139, 196, 215);
+  font-weight: 500;
   text-shadow: 0px 0px 5px rgb(0, 0, 0);
 }
 .resume::after{
@@ -82,7 +82,7 @@
   width: 100%;
   top: 50%;
   left: 50%;
-  padding: 2.5%;
+  padding: 2%;
   color: black;
   transform: translate(-50%,-50%);
   background:linear-gradient(45deg,rgb(20, 220, 20),cyan);
@@ -99,10 +99,10 @@
   padding: 2%;
   color: black;
   transform: translate(-50%,-50%);
-  background:linear-gradient(45deg,rgb(20, 220, 20),cyan);
+  background-color: cyan;
   z-index: -1;
   border-radius: inherit;
-  filter: blur(100px);
+  filter: blur(70px);
 }
 .resume:hover{
   cursor: pointer;
