--- a/frontchat/src/Components/Load/LiquidLoader.css
+++ b/frontchat/src/Components/Load/LiquidLoader.css
@@ -4,17 +4,18 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #0a0a0a;
+  background-color: #51535275;
+  background: radial-gradient(circle, #1e586c75, #000000  );
   color: white;
   font-family: 'Orbitron', sans-serif;
-  scale: 1.5;
+  overflow-y: hidden;
 }
 
 .liquid-bar {
-  width: 80px;
-  height: 200px;
+  width: 7%;
+  height: 40svh;
   border: 2px solid #00ffff;
-  border-radius: 10px;
+  border-radius: 100px;
   overflow: hidden;
   background-color: #111;
   position: relative;
@@ -27,6 +28,15 @@
   width: 100%;
   background: linear-gradient(to top, #00ffff, #0077ff);
   transition: height 0.03s linear;
+  display: flex;
+  justify-content: center;
+  font-size: 1.2em;
+  color: #111;
+  text-shadow: 0px 0px 10px white;
+  padding-left: 10px;
+}
+.liquid h1{
+  writing-mode: vertical-lr;
 }
 
 .loader-text {
@@ -44,16 +54,4 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
-}
-
-.background-video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  transform: translate(-50%, -50%);
-  object-fit: cover;
-  z-index: -1;
-  filter: brightness(1); /* dim video for text visibility */
 }
