--- a/frontchat/src/Components/Main_bar/MainBar.css
+++ b/frontchat/src/Components/Main_bar/MainBar.css
@@ -55,13 +55,15 @@
 .ai_bot {
     font-size: 1.1em;
     color: aliceblue;
+    padding: 1em;
 }
 
 .ai {
-    background: linear-gradient(90deg, #065cb8, rgba(178, 178, 178, 0.986));
+    background: linear-gradient(90deg, #065cb8, rgba(188, 96, 216, 0.986));
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    font-size: 1.8em;
+    font-size: 2em;
+    z-index: 10;
 }
 .resume{
   padding: 10px;
@@ -71,7 +73,7 @@
   position: relative;
   background-color: black;
   text-decoration: none;
-  color: rgb(139, 196, 215);
+  color: white;
   font-weight: 500;
   text-shadow: 0px 0px 5px rgb(0, 0, 0);
 }
@@ -171,7 +173,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    padding: 1rem;
+    padding: 3rem;
   }
 
 
