--- a/frontchat/src/Components/Main_bar/MainBar.css
+++ b/frontchat/src/Components/Main_bar/MainBar.css
@@ -58,11 +58,10 @@
 }
 
 .ai {
-    background: linear-gradient(90deg, #065cb8, rgba(188, 96, 216, 0.986));
+    background: linear-gradient(90deg, #065cb8, rgba(178, 178, 178, 0.986));
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    font-size: 2em;
-    z-index: 10;
+    font-size: 1.8em;
 }
 .resume{
   padding: 10px;
@@ -72,7 +71,7 @@
   position: relative;
   background-color: black;
   text-decoration: none;
-  color: white;
+  color: rgb(139, 196, 215);
   font-weight: 500;
   text-shadow: 0px 0px 5px rgb(0, 0, 0);
 }
@@ -131,12 +130,11 @@
     align-items: center;
     justify-content: center;
     flex-direction: column-reverse;
-    padding-top: 2%;
+    padding-top: 5%;
   }
 }
 @media (max-width: 770px) {
     .inner_main {
-        display: flex;
         flex-direction: column-reverse;
         align-items: center;
         justify-content: flex-start;
@@ -169,8 +167,8 @@
 @media (max-width: 600px) {
   
   .inner_main {
-    display: flex;
-    flex-direction: row;
+    flex: none;
+    flex-direction: column;
     align-items: center;
     justify-content: flex-start;
     padding: 1rem;
