--- a/frontchat/src/Components/Main_bar/MainBar.css
+++ b/frontchat/src/Components/Main_bar/MainBar.css
@@ -112,10 +112,11 @@
     width: 100%;
     max-width: 300px;
     height: auto;
-    border-radius:60% 40% 65% 35% / 37% 53% 47% 63% ;
+    box-shadow: 0px 0px 15px 0px rgb(171, 206, 225);
+    border-radius: 50%;
+    scale: 1.3;
     object-fit: cover;
     transition-duration: 0.7s;
-    filter: drop-shadow(0px 10px 10px rgb(5, 109, 150));
   }
 .img_p:hover{    
   filter: drop-shadow(0px 15px 15px rgb(5, 109, 150));
@@ -132,13 +133,16 @@
     flex-direction: column-reverse;
     padding-top: 5%;
   }
+  .img_p{
+    scale: 1.1;
+  }
 }
 @media (max-width: 770px) {
     .inner_main {
         flex-direction: column-reverse;
         align-items: center;
         justify-content: flex-start;
-        padding: 2rem 1rem;
+        padding: 6rem 5rem;
     }
 
     .middle, .right {
@@ -160,6 +164,7 @@
     }
 
     .img_p {
+        scale: 1.1;
         max-width: 200px;
     }
 }
@@ -171,7 +176,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    padding: 1rem;
+    padding: 2rem;
   }
 
 
@@ -213,6 +218,7 @@
     max-width: 180px;
     width: 100%;
     height: auto;
+    scale: 1;
     box-shadow: 0px 10px 15px 0px rgb(5, 115, 174);
   }
 }
