--- a/frontchat/src/Components/dashboard/dashboard.css
+++ b/frontchat/src/Components/dashboard/dashboard.css
@@ -2,7 +2,7 @@
   max-width: 90%;
   margin: 40px auto;
   padding: 20px;
-  background: linear-gradient(45deg, rgba(255, 255, 255, 0.8), rgb(21, 64, 95));
+  background: linear-gradient(75deg,#8994a5, #15405f);
   border-radius: 20px;
   box-shadow: 0px 0px 40px rgba(9, 83, 143, 0.6);
   transition: all 0.3s ease-in-out;
